# data-pipeline-aws

./: .env.example  .gitignore  README.md  docker-compose.yaml
aws-pricing-downloader/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  services.txt  setup.py
aws-pricing-downloader/aws_pricing_downloader/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  http_client.py  integrity.py  logger.py  metrics.py  storage.py
aws-pricing-downloader/tests/: __init__.py  conftest.py  test_downloader.py  test_http_client.py  test_integrity.py  test_storage.py
aws-resource-downloader/: Dockerfile  requirements.txt  services.txt
aws-resource-downloader/aws_resource_downloader/: __init__.py  collector.py  main.py  registry.py  session.py  storage.py
pricing-data-pipeline/: .env.example  Dockerfile  README.md  docker-compose.yml
pricing-data-pipeline/scripts/: 1-download.py  1.5-validate-raw.py  2-normalize.py  3-sync.sh  4-validate.py  5-test-queries.py  run-all.py  run-all.sh  sync-data.py  validate-all.ps1  validate-all.sh
pricing-data-pipeline/tem_scripts/: analyze_data.py  verify_creds.py  verify_pricing.py
